<resources>
    <string name="app_name">Morbus Logs</string>
    <string name="action_settings">Settings</string>


    <!-- Login page -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_with_google">Sign with Google</string>
    <string name="sign_in_cancelled">Sign in cancelled by user</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="terms_of_service"><u>Terms of Service</u></string>


    <!-- Navigation page -->
    <string name="nav_logout">Logout</string>
    <string name="nav_about">About</string>
    <string name="nav_logs">Saved logs</string>
    <string name="nav_add_new_log">Add new Log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Morbus Logs</string>
    <string name="nav_header_subtitle">Logged as %1$s</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Home page -->
    <string name="home_page_label">Morbus</string>

    <!-- Terms of Service - dialog -->
    <string-array name="description_textView_tos">
        <item> 1. Use this app at your own risk\n</item>
        <item> 2. Before making any actions based on information through this app, contact medical professional.\n</item>
        <item> 3. Don\'t take this app seriously - it is a students project.\n</item>
        <item> 4. This was certainly written by a lawyer.\n</item>
    </string-array>
    <string name="close_button_tos">Close</string>
    <string name="header_textView_tos"> <big><b>Terms of Service</b></big></string>

    <!-- Logout Dialog -->
    <string name="message_logout_dialog">Are you sure you want to logout?</string>
    <string name="confirm_logout_dialog">Logout</string>
    <string name="cancel_logout_dialog">Cancel</string>
    <string name="title_logout_dialog">Confirm logout</string>

    <!-- Models -->
    <string name="gender_patient">{0,choice, 0#Male| 1#Female}</string>


    <!-- New Symptom Fragment -->
    <string-array name="symptom_array">
        <item>Pain</item>
        <item>Temperature</item>
        <item>Other</item>
    </string-array>
    <string name="symptom_name">Choose symptom:</string>
    <string name="date_chooser_symptom">Date of Occurrence:</string>
    <string name="date_button_symptom">Click to choose.</string>
    <string name="date_chosen_symptom">%d / %d / %d</string>
    <string name="duration_symptom">Duration:</string>
    <string-array name="duration_array_symptom">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string name="description_symptom">Description</string>
    <string name="unfilled_fields_toast">Please fill all empty fields!</string>
    <string name="incorrect_temp_toast">Incorrect temperature value! (Or dead in 3.. 2.. 1..)</string>
    <string name="add_symptom_button">Add symptom</string>
    <string name="confirm_changes_symptom_button">Confirm changes</string>
    <string name="choose_photo_btn">Choose photo</string>
    <string name="see_chosen_btn">Preview photo</string>
    <string name="filename_text_view">Filename</string>
    <string name="file_chosen_successfuly_toast">File chosen successfully!</string>
    <string name="no_photo_added">No photo was added to symptom yet!</string>


    <!-- New Log Fragment -->
    <string name="add_new_symptom">Add new symptom</string>
    <string name="log_item_symp_name_tv">Name:</string>
    <string name="log_item_date_tv">Date:</string>
    <string name="no_symptoms_available">No symptoms added, \n click the button to add one.</string>
    <string name="confirm_log_item_delete_dialog">Are you sure you want to delete it?</string>
    <string name="title_log_item_delete_dialog">Confirm delete</string>
    <string name="confirm_delete_log_item_dialog">Delete</string>
    <string name="cancel_delete_log_item_dialog">Cancel</string>
    <string name="save_to_db_button">Save entry log</string>
    <string name="message_add_log_dialog">Are you sure you want to save this entry?</string>
    <string name="blank_title_message_log_dialog"> Your title is empty.</string>
    <string name="title_add_log_dialog">Confirm saving changes.</string>
    <string name="cancel_opt_add_log_dialog">Cancel</string>
    <string name="confirm_opt_add_log_dialog">Save changes</string>
    <string name="success_adding_toast">Success saving!</string>
    <string name="log_title">Title:</string>
    <string name="add_atleast_one_log_toast">Please add at least one log before saving!</string>
    <string name="new_log_title">New Log</string>


    <!-- Historical Symptoms Fragment -->
    <string name="rec_view_date_hist_symp">Date:</string>
    <string name="rec_view_title_hist_symp">Title:</string>
    <string name="rec_view_number_of_logs_hist_symp">Number of logs:</string>
    <string name="rec_view_hour_hist_symp">Hour:</string>
    <string name="success_del_toast_adapter">Success!</string>
    <string name="failure_del_toast_adapter">Oops.. Something went wrong deleting!</string>


    <!-- Abnormal Temp Fragment -->
    <string name="temperature_input_fragment">Temperature (°C):</string>

    <!-- Pain Symptom Fragment -->
    <string name="pain_intensity">Intensity:</string>
    <string-array name="pain_intensity_array">
        <item>No pain</item>
        <item>Mild</item>
        <item>Moderate</item>
        <item>Intense</item>
        <item>Maximum</item>
    </string-array>
    <string name="pain_type">Pain type:</string>
    <string-array name="pain_type_array">
        <item>Soft Tissue</item>
        <item>Acute</item>
        <item>Chronic</item>
        <item>Breakthrough</item>
        <item>Bone</item>
        <item>Nerve</item>
        <item>Referred</item>
        <item>Phantom</item>
    </string-array>

    <!-- About section -->
    <string name="greeting_txt_view">Welcome to Morbus Logs!</string>
    <string name="explanation_txt_view">Below you can find guide on how to use this app as well as short FAQ.</string>
    <string name="first_point_txt_view">1. How to use this app?</string>
    <string name="first_point_explained_txt_view">This app consists of 2 core concepts: <b>Logs</b> and <b>Symptoms</b>.</string>
    <string name="symptoms_explained_txt_view"> - <b>Symptom</b> - is everything that is happening to you, when you try to describe how you feel to a doctor.
        Everything from running nose, raised temperature or even small headache is a <b>Symptom</b>.
    </string>
    <string name="logs_explained_txt_view"> - <b>Logs</b> - consist of many symptoms that you added yourself with title of your choice and the date of saving.</string>
    <string name="saving_explained_txt_view">You can save any number of logs or symptoms, sky is the limit! Everything is saved for you and is available on any device with Morbus
    Logs in it, you only need your google account to log in!
    </string>
    <string name="second_point_txt_view">2. Is Morbus supervised by medical professional?</string>
    <string name="second_point_explained_txt_view"> No, and you should not take any advice you see before contacting any medical professional. This is a students project and for now is meant
    for educational purposes only.</string>
    <string name="third_point_txt_view">3. How to contact you?</string>
    <string name="third_point_explained_txt_view">Should you have any further questions, write me an email: <b>michal0kasprzyk@gmail.com</b></string>

    <!-- Other Fragment -->
    <string name="name_other_symptom">Specify name:</string>

</resources>
